gitignoreルールを修正
mif,logが正しくパターンマッチしていなかったので

--- a/rtl/.gitignore
+++ b/rtl/.gitignore
@@ -1,6 +1,13 @@
-m2vctrl_code.{mif,log}
-m2vidct_fram.{mif,log}
-m2vidct_rom.{mif,log}
-m2visdq_cmem.{mif,log}
-m2vmc_fetch.{mif,log}
-m2vvld_table.{mif,log}
+m2vctrl_code.log
+m2vctrl_code.mif
+m2vidct_fram.log
+m2vidct_fram.mif
+m2vidct_rom.log
+m2vidct_rom.mif
+m2visdq_cmem.log
+m2visdq_cmem.mif
+m2vmc_fetch.log
+m2vmc_fetch.mif
+m2vvld_table.log
+m2vvld_table.mif
+m2vdec.v
