--- a/quartus/demo_de0.qsf
+++ b/quartus/demo_de0.qsf
@@ -600,4 +600,6 @@ set_global_assignment -name ROUTER_CLOCKING_TOPOLOGY_ANALYSIS ON
 set_global_assignment -name SYNCHRONIZATION_REGISTER_CHAIN_LENGTH 3
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+
+set_instance_assignment -name AUTO_GLOBAL_CLOCK ON -to clk50mhz_*
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
