テストベンチ(isdq)整備完了、idct整備中
sideinfoの取り込みタイミングを変更しているため、現時点では合成不可(pre_block_start)

--- a/test/isdq/Makefile
+++ b/test/isdq/Makefile
@@ -1,6 +1,6 @@
 
 MODULES_DPI_C += test_m2visdq
-SOURCES = feed_m2visdq.cpp
+SOURCES = feed_m2visdq.cpp verify_m2visdq.cpp
 
 include ../common.mk
 
