--- a/quartus/demo_de0.qsf
+++ b/quartus/demo_de0.qsf
@@ -602,4 +602,5 @@ set_instance_assignment -name AUTO_GLOBAL_CLOCK ON -to clk50mhz_*
 set_global_assignment -name QSYS_FILE demo_de0_sys.qsys
 set_global_assignment -name SDC_FILE demo_de0.sdc
 set_global_assignment -name VERILOG_FILE demo_de0.v
+set_global_assignment -name QIP_FILE demo_de0_pll.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
